# django-fastapi-nextjs-micro-services-boilerplate

./: STEPS.md  env-example
ansible/: provision-vps.yml
argocd/: applicationset.yaml  terraform-apply.yml  terraform-plan.yml
env/: vps.env
infra/: backend.tf  bootstrap-create-state.sh  variables.tf
infra/modules/eks/: main.tf  variables.tf
infra/modules/iam/: github_oidc.tf  variables.tf
scripts/: deploy-vps.sh
services/user-service/: .dockerignore  DJANGO-PROJECT-SETUP.txt  Dockerfile  README.md  env.example  manage.py  pyproject.toml  requirements.txt
services/user-service/apps/accounts/: admin.py  choices.py  forms.py  manager.py  models.py  serializers.py  service.py  urls.py  views.py
services/user-service/apps/accounts/tests/: test_accounts.py
services/user-service/apps/common/: choices.py  models.py  urls.py  utils.py  views.py
services/user-service/coreAPI/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
services/user-service/coreAPI/settings/: base.py  development.py  production.py
